samples/_failures_safe/1761550497_6e3d1c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e03938b3.c: In function ‘main’:
./samples/SAFE/__tmp_e03938b3.c:159:9: error: expected declaration or statement at end of input
  159 |         printf("Error: Invalid input\n");
      |         ^~~~~~
./samples/SAFE/__tmp_e03938b3.c:159:9: error: expected declaration or statement at end of input
